--- a/styles.css
+++ b/styles.css
@@ -6,14 +6,6 @@
     --VeryDarkGray: hsl(0, 0%, 41%);
 }
 
-
-/* 
-font-family: 'Alata', sans-serif;
-font-family: 'Fraunces', serif;
-font-family: 'Josefin Sans', sans-serif;
-
-*/
-
 html {
     font-size: 15px;
 }
@@ -96,15 +88,68 @@ nav {
     margin: 0px;
 }
 
-.section-3 {
-    background-color: red;
-}
+.section-3 {}
 
 .section-header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    margin: 38px 0px;
 }
 
 .section-header>h1 {
     font-family: 'Josefin Sans', sans-serif;
+    font-size: 3.2rem;
+    font-weight: 100;
 }
+
+button {
+    font-family: 'Alata', sans-serif;
+    background-color: transparent;
+    border: 1px black solid;
+    font-size: 1.0rem;
+    letter-spacing: 0.3em;
+    padding: 0.6em 2.5em;
+}
+
+.section-body {
+    color: var(--White);
+    display: grid;
+    gap: 28px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.card {
+    color: var(--White);
+    position: relative;
+}
+
+.card-img {
+    object-fit: cover;
+    width: 100%;
+}
+
+.card-title {
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 2.0rem;
+    font-weight: 200;
+    position: absolute;
+    bottom: 1%;
+    left: 15.2%;
+    margin-right: 10%;
+    z-index: 2;
+}
+
+.overlay {
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.664));
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+
+
+/* 
+font-family: 'Alata', sans-serif;
+font-family: 'Fraunces', serif;
+font-family: 'Josefin Sans', sans-serif;
