--- a/styles.css
+++ b/styles.css
@@ -148,6 +148,49 @@ button {
     position: absolute;
 }
 
+footer {
+    background-color: black;
+    color: white;
+    height: 160px;
+    width: 100vw;
+    position: absolute;
+    left: 0px;
+    margin-top: 180px;
+    display: flex;
+    padding: 0 11.3%;
+    box-sizing: border-box;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-left {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+}
+
+.footer-nav {
+    display: flex;
+    gap: 20px;
+}
+
+.footer-right {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.social-links {
+    display: flex;
+    gap: 20px;
+}
+
+.footer-right>p {
+    text-align: right;
+    color: var(--DarkGray);
+}
+
 
 /* 
 font-family: 'Alata', sans-serif;
