--- a/styles.css
+++ b/styles.css
@@ -363,4 +363,35 @@ footer {
         text-align: right;
         color: var(--DarkGray);
     }
+    /* Drawer */
+    .drawer {
+        position: fixed;
+        z-index: 999;
+        width: 100vw;
+        height: 100vh;
+        left: 0px;
+        padding: 32px;
+        box-sizing: border-box;
+        top: 0px;
+        display: none;
+        flex-direction: column;
+        gap: 30%;
+        color: white;
+        background-color: black;
+    }
+    .drawer-header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .drawer-body {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        height: 80%;
+        font-size: x-large;
+        font-family: 'Josefin Sans', sans-serif;
+        text-transform: uppercase;
+    }
 }
